// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select > add className 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white foo"
/>
`;

exports[`select > child nodes > children 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
>
  <option
    value="meximelt"
  >
    Mexi-melt
  </option>
</select>
`;

exports[`select > child nodes > children with choices 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
>
  <option
    value="mild"
  >
    Mild
  </option>
  <option
    value="hot"
  >
    Hot
  </option>
  <option
    value="fire"
  >
    Fire
  </option>
  <option
    value="meximelt"
  >
    Mexi-melt
  </option>
</select>
`;

exports[`select > choices > choice 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
>
  <option
    value="mild"
  >
    Mild
  </option>
  <option
    value="hot"
  >
    Hot
  </option>
  <option
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`select > choices > choices 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
>
  <option
    value="Mild"
  >
    Mild
  </option>
  <option
    value="Hot"
  >
    Hot
  </option>
  <option
    value="Fire"
  >
    Fire
  </option>
</select>
`;

exports[`select > choices > choices as objects 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
>
  <option
    value="mild"
  >
    Mild
  </option>
  <option
    value="hot"
  >
    Hot
  </option>
  <option
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`select > empty 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
/>
`;

exports[`select > groups > no value 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
>
  <optgroup
    label="Tacos"
  >
    <option
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    label="Saunce"
  >
    <option
      value="mild"
    >
      Mild
    </option>
    <option
      value="hot"
    >
      Hot
    </option>
    <option
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`select > groups > value 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
>
  <optgroup
    label="Tacos"
  >
    <option
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    label="Saunce"
  >
    <option
      value="mild"
    >
      Mild
    </option>
    <option
      value="hot"
    >
      Hot
    </option>
    <option
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`select > groups > values 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
  multiple=""
>
  <optgroup
    label="Tacos"
  >
    <option
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    label="Saunce"
  >
    <option
      value="mild"
    >
      Mild
    </option>
    <option
      value="hot"
    >
      Hot
    </option>
    <option
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`select > multiple > false 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
/>
`;

exports[`select > multiple > falsey 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
  multiple=""
/>
`;

exports[`select > multiple > string 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
  multiple=""
/>
`;

exports[`select > multiple > true 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
  multiple=""
/>
`;

exports[`select > multiple > truthy 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
  multiple=""
/>
`;

exports[`select > placeholder > choices 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
>
  <option
    value=""
  >
    -- Select Flavor --
  </option>
  <option
    value="Mild"
  >
    Mild
  </option>
  <option
    value="Hot"
  >
    Hot
  </option>
  <option
    value="Fire"
  >
    Fire
  </option>
</select>
`;

exports[`select > placeholder > choices as objects 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
>
  <option
    value=""
  >
    -- Select Flavor --
  </option>
  <option
    value="mild"
  >
    Mild
  </option>
  <option
    value="hot"
  >
    Hot
  </option>
  <option
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`select > placeholder > no choices 1`] = `
<select
  class="my-1 mr-1 last:mr-0 focus:border-pink focus:ring-3 focus:ring-opacity-50 transition-colors h-9 rounded-lg border-neutral-300 bg-white py-0 pr-9 text-sm shadow-xs dark:bg-surface-dark-elevated hover:border-neutral-400 dark:border-white/10 dark:text-white"
>
  <option
    value=""
  >
    -- Select Flavor --
  </option>
</select>
`;
